# oscr_rosexample

./: CMakeLists.txt  package.xml
config/: ff6dof-fixed.rviz  ff6dof-gui.rviz  ff6dof.rviz
launch/: display-fixed.launch  display-gui.launch  display.launch
scripts/: model_parse_py  motion_demo_py
urdf/: ff6dof.urdf  ff6dof.xacro
