<?xml version="1.0"?>
<package format="2">
  <name>oscr_rosexample</name>
  <version>0.0.1</version>
  <description>The oscr_rosexample package</description>
  <maintainer email="oramos@todo.todo">Oscar Ramos</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
